[gd_scene load_steps=19 format=2]

[ext_resource path="res://elements/enemies/e001.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/1 - Gum Bot/Walking (32 x 32).png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/1 - Gum Bot/Screen-off (32 x 32).png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/1 - Gum Bot/Hurt (32 x 32).png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/1 - Gum Bot/Turn_Around_Poses (32 x 32).png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 36, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "delete",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 20, 22 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 3 )

[node name="e001" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
velocidad = 60
gravedad = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 10 )
animation = "walk"
frame = 5
flip_h = true

[node name="RayFloor" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 0, 36 )

[node name="RayRight" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 0, 10 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="AnimatedSprite"]
position = Vector2( 0, 6.66667 )
scale = Vector2( 0.8, 0.933333 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 26 )
shape = SubResource( 13 )

[node name="Label" type="Label" parent="."]
margin_left = -160.0
margin_top = -96.0
margin_right = 160.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
text = "qwe"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="viewport_entered" from="AnimatedSprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="AnimatedSprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
